fixing spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     -webkit-perspective: 300px;
-    perspective: 300px;
+    perspective: 500px;
   }
 
   .parallax__group {
@@ -88,7 +88,9 @@
   }
 
   .about {
-    left: 38%;
+    top: 43%;
+    left: 63%;
+    color: #fff;
   }
 
 /* style the groups
@@ -102,7 +104,7 @@
     z-index: 3; /* slide under groups 1 and 3 */
   }
   #group2 .parallax__layer--base {
-    background: #a1d1b5;
+    background-image: url(../images/sunflower.jpg);
 
   }
 
@@ -111,7 +113,7 @@
     height: 100vh;
   }
   #group3 .parallax__layer--base {
-    background: rgb(153,216,101);
+    background: #ffd1bc;
   }
 
   #group3 .parallax__layer--fore {
@@ -130,38 +132,49 @@
     width: 100%;
   }
 
-  img {
+  .bio-pic {
     height:400px;
     float: left;
     text-align: center;
     position: absolute;
-    left: 62%;
-    top: 50%;
+    left: 37%;
+    top: 43%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     border-radius: 50%;
   }
 
   .name {
-    top: 5%;
-    font-size: 70px;
+    top: 15%;
+    font-size: 60px;
     font-family: "Cormorant Unicase", serif;
     font-weight: bold;
 
   }
 
   .icons {
-    top: 30%;
+    top: 40%;
   }
 
   i {
     margin: 30px;
   }
 
-  a {
+  a, a:visited {
     color: white;
   }
 
-  a:hover, a:visited {
-    color: pink;
+  a:hover {
+    color: #ffd1bc;
   }
+
+  .fontizer {
+    float:left;
+    height:400px;
+  }
+
+  .font-site{
+        top: 90%;
+
+  }
+
